<resources>
    <string name="app_name">Guia USC</string>
    //PANTALLA PRINCIPAL//
    <string name="btCalendario">Calendario</string>
    <string name="btBuscarEvento">Buscar evento</string>
    <string name="btEventosInscritos">Eventos inscritos</string>
    //PANTALLA DE EVENTOS//
    <string name="tvTituloEvento">Titulo Default</string>
    <string name="tvTituloFecha">Fecha: </string>
    <string name="tvTituloPonentes">Ponentes</string>
    <string name="tvTituloUbicacion">Ubicacion: </string>
    <string name="tvTituloDescripcion">Descripción</string>
    <string name="tvTituloHora">Hora: </string>
    <string name="btnInscribirse">Inscribirse</string>
    //PANTALLA DE EVENTOS OPCIONES//
    <string name="btnCancelarIns">Cancelar \ninscripcion</string>
    <string name="btnSolicitarruta">Solicitar ruta</string>
    <string name="btnAtras">Atras</string>
    //PANTALLA DE CALENDARIO//
    <string name="tvTituloFactultad">Eventos\npor facultad:</string>

    //PANTALLA DE DIALOGOS//

    //-Dialogo Buscar evento
    <string name="tituloDiaBuscarEvento">Ingrese el nombre o codigo del evento.</string>
    <string name="nombreEvento">Nombre del evento</string>
    <string name="codigoEvento">Codigo del evento</string>


    //Nombre botones generales
    <string name="btnDiaBusNombre">Buscar Nombre</string>
    <string name="btnDiaBusCodigo">Buscar Codigo</string>
    <string name="btnCancelar">Cancelar</string>
    <string name="btnEliminar">Eliminar</string>
    <string name="btnBuscar">Buscar</string>


    //TOAST//

    //- Toast Dialogo Buscar Evento - Pantalla principal/PP
    //Error 1. No se ingreso ningun valor de busqueda
    <string name="toastPPError1">Por favor, ingrese el nombre del evento que desea buscar.</string>
    <string name="toastPPError2">Por favor, ingrese el codigo del evento que desea buscar.</string>
    <string name="toastPPError3">No se ha encontrado ningún evento con ese nombre.</string>
    <string name="toastPPError4">No se ha encontrado ningún evento con ese codigo.</string>
    <string name="toastPPError5">No tienes acceso a internet en este momento.</string>
    <string name="toastPPError6">Hubo un error, no se puedo eliminar el evento.</string>
    <string name="toastPPError7">No te has inscrito a ningún evento.</string>

    //- Toast evento - Pantalla evento/PE
    <string name="toastPEAlerta1">Te has inscrito a este evento.</string>
    <string name="toastPEAlerta2">El evento ha sido eliminado.</string>
    <string name="toastPEError1">Ya te has inscrito a este evento.</string>


    //- Toast evento - Pantalla calendario / PC
    <string name="toastPCError1">Hubo un error, no se puede obtener los datos de la lista.</string>
    <string name="toastPCError2">No se encontraron eventos para esta facultad.</string>

    //About
    <string name="about">
        Guía Usc\n

        \nBienvenidos a la aplicación para eventos de la Universidad Santiago de Cali – sede Pampalinda, en esta aplicación podrás visualizar el calendario de eventos de la Universidad, poder ver su fecha, hora, descripción y ponentes y estar al tanto de los cambios que surjan antes y durante el evento.\n
        \nSu uso es muy fácil, hay 3 botones los cuales sirven para interactuar con la aplicación:\n

        \n1. Botón de calendario:
        Este botón despliega una lista de la totalidad de eventos que la Universidad este ofreciendo en ese momento, donde podrás visualizar el nombre, la fecha y la hora de los eventos planeados. Además, podrás filtrar los eventos mediante facultades, seleccionando está en la parte superior y oprimiendo buscar.\n

        \n2. Botón buscar:
        Este botón despliega un cuadro de búsqueda la cual, insertando el nombre o código del evento, te llevara a su información directamente.\n
        \n
        3. Botón eventos inscritos:
        Este botón despliega una lista de los eventos los cuales te hayas inscrito y te llegaran alertas en base a estos, como posibles cambios en su ubicación, fecha u horario. Para la inscripción de eventos simplemente tienes que buscar uno de tu interés y oprimir el botón “inscribirse”.\n
        \n
        La aplicación no almacena ningún dato personal y los eventos inscritos será guardados internamente en el dispositivo del usuario. Para las notificaciones de cambios acerca de los eventos, es necesaria la conexión a internet. La Universidad no se hace responsable de información desactualizada llegada a mostrarse en el aplicativo.
    </string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_maps2">Map</string>

</resources>
