<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:background="@color/colorVentana"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvDiagTitulo"
        android:layout_width="match_parent"
        android:layout_height="37dp"
        android:layout_marginTop="0dp"
        android:background="@color/colorPrimary"
        android:gravity="center_vertical"
        android:text="@string/tituloDiaBuscarEvento"
        android:textAlignment="center"
        android:textColor="@android:color/background_light"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/diaNombreEvento"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="45dp"
        android:layout_marginRight="4dp"
        android:hint="@string/nombreEvento"
        android:inputType="text"
        android:textColor="@color/colorLetraPrincipal"
        android:textColorHint="@color/colorLetrasHint"
        tools:text="@string/nombreEvento" />

    <EditText
        android:id="@+id/diaCodigoEvento"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="90dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="sans-serif"
        android:hint="@string/codigoEvento"
        android:inputType="number"
        android:textColor="@color/colorLetraPrincipal"
        android:textColorHint="@color/colorLetrasHint"
        tools:text="@string/codigoEvento" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnDiaBusNombre"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:background="@drawable/btn_aceptar"
            android:onClick="onClickGuiaUsc"
            android:text="@string/btnDiaBusNombre"
            android:textColor="@drawable/txt_btn_aceptar"
            android:textSize="18sp" />

        <View
            android:id="@+id/view"
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <Button
            android:id="@+id/btnDiaBusCodigo"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:background="@drawable/btn_aceptar"
            android:onClick="onClickGuiaUsc"
            android:text="@string/btnDiaBusCodigo"
            android:textColor="@drawable/txt_btn_aceptar"
            android:textSize="18sp" />

    </LinearLayout>

</RelativeLayout>