<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nUbicacion"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_no_home"
    tools:context=".evento">

    <TextView
        android:id="@+id/tvEvNombreEvento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="163dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="163dp"
        android:text="@string/tvTituloEvento"
        android:textColor="@color/colorLetraPrincipal"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/dvEvImg"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_margin="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="5dp"
        android:background="@android:color/darker_gray"
        android:textColor="@android:color/white"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvEvNombreEvento" />

    <ImageView
        android:id="@+id/ivEvImagenEvento"
        android:layout_width="0dp"
        android:layout_height="250dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dvEvImg" />

    <TextView
        android:id="@+id/tvEvTituloFechaEvento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/tvTituloFecha"
        android:textColor="@color/colorLetraPrincipal"
        android:textSize="21sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivEvImagenEvento" />

    <TextView
        android:id="@+id/tvEvFechaEvento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="11dp"
        android:text="1/1/2019"
        android:textColor="@color/colorLetraPrincipal"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/tvEvTituloFechaEvento"
        app:layout_constraintTop_toBottomOf="@+id/ivEvImagenEvento" />

    <TextView
        android:id="@+id/tvEvTituloUbicacion"
        android:layout_width="103dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="6dp"
        android:text="@string/tvTituloUbicacion"
        android:textAllCaps="false"
        android:textColor="@color/colorLetraPrincipal"
        android:textSize="21sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/btnEvUbicacion"
        app:layout_constraintTop_toBottomOf="@+id/ivEvImagenEvento" />

    <Button
        android:id="@+id/btnEvUbicacion"
        android:layout_width="48dp"
        android:layout_height="25dp"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="16dp"
        android:background="@color/colorbtn"
        android:onClick="onClickEvento"
        android:text="2413"
        android:textAllCaps="false"
        android:textColor="@color/colorLetraPrincipal"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivEvImagenEvento" />

    <TextView
        android:id="@+id/tvEvTituloHora"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/tvTituloHora"
        android:textColor="@color/colorLetraPrincipal"
        android:textSize="21sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvEvTituloFechaEvento" />

    <TextView
        android:id="@+id/tvEvHora"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="13dp"
        android:text="@string/tvTituloHora"
        android:textColor="@color/colorLetraPrincipal"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/tvEvTituloHora"
        app:layout_constraintTop_toBottomOf="@+id/tvEvFechaEvento" />

    <TextView
        android:id="@+id/tvEvTituloPonentes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:text="@string/tvTituloPonentes"
        android:textColor="@color/colorLetraPrincipal"
        android:textSize="21sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvEvTituloHora" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="105dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvEvTituloPonentes">

        <ListView
            android:id="@+id/lvEvPonentes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <TextView
        android:id="@+id/tvEvTituloDescripcion"
        android:layout_width="117dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/tvTituloDescripcion"
        android:textColor="@color/colorLetraPrincipal"
        android:textSize="21sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <TextView
        android:id="@+id/tvEvDescripcion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:text="@string/tvTituloDescripcion"
        android:textColor="@color/colorLetraPrincipal"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvEvTituloDescripcion" />

    <Button
        android:id="@+id/btnEvInscribirse"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/btn_aceptar"
        android:onClick="onClickEvento"
        android:text="@string/btnInscribirse"
        android:textAllCaps="false"
        android:textColor="@drawable/txt_btn_aceptar"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnEvElimintar"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/btn_eliminar"
        android:onClick="onClickEvento"
        android:text="@string/btnEliminar"
        android:textAllCaps="false"
        android:textColor="@drawable/txt_btn_eliminar"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnEvCancelar"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/btn_cancelar"
        android:onClick="onClickEvento"
        android:text="@string/btnCancelar"
        android:textAllCaps="false"
        android:textColor="@drawable/txt_btn_cancelar"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


</android.support.constraint.ConstraintLayout>